# supersimplesearch

./: .gitignore  Cargo.toml  README.md  create_datapoints.py
src/: main.rs
templates/: index.html.tera  results.html.tera
