[package]
name = "supersimplesearch"
version = "0.2.0"
authors = ["Kushal Das <mail@kushaldas.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
